# trashy_server

./: .gitignore  CMakeLists.txt  README.md
site/: 404.html  500.html  index.html
site_enable/: default.conf
src/: CMakeLists.txt  Server.cpp  Server.h  config.h  creat_socket.cpp  creat_socket.h  http_parse.cpp  http_parse.h  log.h  main.cpp  my_str.cpp  my_str.h  script_parse.cpp  script_parse.h  service.cpp  service.h  socket.h  status_code.h  test_connection.cpp  tool_util.cpp  tool_util.h
src/lib/: CMakeLists.txt  http_parse.cpp  http_parse.h  service.cpp  service.h  socket.cpp  socket.h
src/templates/: search_dir.hxx
test_module/: Makefile  http_request_exm.h  makefile  test_main.cpp
